--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ frontend/node_modules
 
 *.pyc
 **/__pycache__/
-
+.vscode
 .idea/
 
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
